bindata/networking-console-plugin/003-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/description: Expose the networking console plugin service on port 9443. This port is for internal use, and no other usage is guaranteed.
    service.beta.openshift.io/serving-cert-secret-name: networking-console-plugin-cert
  labels:
    app.kubernetes.io/component: networking-console-plugin
    app.kubernetes.io/managed-by: cluster-network-operator
    app.kubernetes.io/name: networking-console-plugin
    app.kubernetes.io/part-of: cluster-network-operator
  name: networking-console-plugin
  namespace: openshift-network-operator
spec:
  ports:
  - name: https
    port: 9443
    targetPort: https
  selector:
    app.kubernetes.io/component: networking-console-plugin
    app.kubernetes.io/managed-by: cluster-network-operator
    app.kubernetes.io/name: networking-console-plugin
    app.kubernetes.io/part-of: cluster-network-operator
  sessionAffinity: None
