bindata/networking-console-plugin/000-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-network-console
  labels:
    openshift.io/cluster-monitoring: "true"
  annotations:
    openshift.io/description: "Namespace for running the networking-console-plugin pods that enables the Networking console section"
    workload.openshift.io/allowed: "management"
    openshift.io/node-selector: ""
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: openshift-network-console
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []
